# FakeImageDetector_v1

./: .gitignore  .t_img.json  .tsys.json  .webui_secret_key  CODE_EXPLANATION.md  README.md  TRAINING_GUIDE.md  app.py  check_gpu.py  extract_video_frames.py  flowchart.md  infer_one.py  predict_test.py  requirements.txt  train_vision_fakeclue.py
.claude/: settings.json  settings.local.json
fakedet_system/: .env.example  .gitignore  .webui_secret_key  Dockerfile  README.md  README_HE_THONG.md  docker-compose.yml  pyproject.toml
fakedet_system/src/fakedet_system/: __init__.py  config.py  prompts.py  prompts.yaml
fakedet_system/src/fakedet_system/memory/: store.py
fakedet_system/src/fakedet_system/pipeline/: __init__.py  build.py  external.py
fakedet_system/src/fakedet_system/pipeline/components/: __init__.py  feedback_ingester.py  input_parser.py  intent_classifier.py  memory.py  prompt_builder.py  rag_store.py  responder.py
fakedet_system/src/fakedet_system/serve/: __init__.py  openai_api.py
fakedet_system/tests/: test_components.py  test_memory.py  test_pipeline.py
fakedet_vlm/: .dockerignore  .gitignore  CHATGPT_UI.md  CHAY_FREE.md  Dockerfile  HUONG_DAN.md  Makefile  README.md  THUE_VAST_AI.md  app.py  conftest.py  docker-compose.yml  pyproject.toml  run_backend_colab.ipynb
fakedet_vlm/configs/: base.yaml  stage1.yaml  stage2.yaml
fakedet_vlm/hf_space/: Dockerfile  HUONG_DAN_HF.md  README.md  start.py
fakedet_vlm/runs/stage2_sft/eval/: eval_metrics.json  eval_predictions.jsonl
fakedet_vlm/runs/stage2_sft/final/: trainer_state.json
fakedet_vlm/scripts/: compare_llms.py  eval.py  prepare_fakeclue.py  setup_cloud.sh  setup_cloud_blackwell.sh  train_vision_v2.py  upload_checkpoint_hf.py  verify_vit_loads.py
fakedet_vlm/src/fakedet_vlm/data/: __init__.py  augment.py  collator.py  dataset.py  prompts.py
fakedet_vlm/src/fakedet_vlm/infer/: __init__.py  pipeline.py
fakedet_vlm/src/fakedet_vlm/models/: __init__.py  projector.py  vit_loader.py  vlm.py
fakedet_vlm/src/fakedet_vlm/serve/: __init__.py  api.py  openai_api.py
fakedet_vlm/src/fakedet_vlm/train/: common.py  stage1.py  stage2.py
fakedet_vlm/src/fakedet_vlm/utils/: __init__.py  memory.py
fakedet_vlm/tests/: test_augment.py  test_dataset.py  test_masked_scatter.py  test_projector.py  test_vit_loader.py  test_vlm_integration.py
templates/: index.html
