[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fakedet_vlm"
version = "0.1.0"
description = "VLM for explainable deepfake detection (ViT-B/16 frozen + Qwen2.5-1.5B + LoRA)"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  # 4.50+ ships transformers/integrations/moe.py which calls
  # torch.library.custom_op with string-form torch.Tensor annotations that
  # torch < 2.5 does not accept (ValueError: infer_schema).  Cap at <4.50
  # until we upgrade torch in the cloud setup script.
  "transformers>=4.46,<4.50",
  "accelerate>=0.34,<1.0",
  "peft>=0.12,<0.14",
  "bitsandbytes>=0.43; sys_platform != 'darwin'",
  "datasets>=2.20,<3.0",
  "timm>=1.0.9",
  "Pillow>=10",
  "pyyaml>=6",
  "tqdm>=4.65",
  "scikit-learn>=1.3",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
  "protobuf>=4",
  "huggingface_hub>=0.24,<0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-xdist", "ruff>=0.6"]
train = ["wandb>=0.17", "trl>=0.10"]
serve = ["fastapi>=0.115", "uvicorn>=0.30", "vllm>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
